[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AegisOpenEnv"
version = "4.0.0"
description = "A high-fidelity financial compliance RL sandbox for autonomous auditors."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Armaan"}
]
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "datasets",
    "torch",
    "transformers",
    "huggingface_hub"
]

[project.scripts]
aegisopenenv = "server.app:app"

[tool.setuptools]
packages = ["server"]

[project.urls]
Homepage = "https://github.com/Armaansaini20/AegisOpenEnv"
Repository = "https://github.com/Armaansaini20/AegisOpenEnv"
